[package]
name = "sagyou-shiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.1.8", features = ["derive"] }
dotenvy = "=0.15.6"
serenity = { version = "=0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "=1.26.0", features = ["full"] }
